--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  *{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   }
-}
+  @font-face {
+    font-family: 'Euclid Circular A';
+    src: url('../fonts/EuclidBold.ttf') format('ttf');
+    font-weight: 700;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Euclid Circular A';
+    src: url('../fonts/EuclidRegular.ttf') format('ttf');
+    font-weight: 400;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Euclid Circular A';
+    src: url('../fonts/EuclidLight.ttf') format('ttf');
+    font-weight: 300;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: 'Euclid Circular A';
+    src: url('../fonts/EuclidSemiBold.ttf') format('ttf');
+    font-weight: 600;
+    font-style: normal;
+  }
+    .loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid blue;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+  }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 }
